profile update feature added

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,7 @@
 MONGO_URL = "mongodb+srv://aktkishansingh:FJuQqzBUlmUfHXID@cluster0.o1mxlqg.mongodb.net/"
 
 JWT_SECRET = kishan_singh
+
+CLOUD_NAME= dscjoiisv
+CLOUD_API = 365663927939767
+CLOUD_SECRET = WdSza5YL1SjM13scKZj3wWQxo-k
